<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4.5"
        >
        <TextView
            android:textSize="@dimen/cal_result_textsize"
            android:layout_margin="@dimen/cal_result_margin"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cal_result_tv"/>

    </LinearLayout>
    <!--<GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="4"
        android:columnCount="4"
        android:layout_gravity="center"
        android:layout_weight="2">

        <Button
            android:layout_margin="@dimen/digit_pad_margin"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/digit_pad_one"
            android:id="@+id/digit_pad_one_btn"
            android:layout_width="@dimen/digit_pad_width"
            android:layout_height="@dimen/digit_pad_width"/>
        <Button
            android:layout_margin="@dimen/digit_pad_margin"
            android:text="@string/digit_pad_two"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:id="@+id/digit_pad_two_btn"
            android:layout_width="@dimen/digit_pad_width"
            android:layout_height="@dimen/digit_pad_width"/>
        <Button
            android:text="@string/digit_pad_three"
            android:layout_margin="@dimen/digit_pad_margin"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:id="@+id/digit_pad_three_btn"
            android:layout_width="@dimen/digit_pad_width"
            android:layout_height="@dimen/digit_pad_width"/>
        <Button
            android:text="@string/digit_pad_plus"
            android:id="@+id/digit_pad_plus_btn"
            android:layout_width="@dimen/digit_pad_width"
            android:layout_height="@dimen/digit_pad_width"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/digit_pad_margin" />

        <Button
            android:text="@string/digit_pad_four"
            android:layout_margin="@dimen/digit_pad_margin"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:id="@+id/digit_pad_four_btn"
            android:layout_width="@dimen/digit_pad_width"
            android:layout_height="@dimen/digit_pad_width"/>
        <Button
            android:text="@string/digit_pad_five"
            android:layout_margin="@dimen/digit_pad_margin"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:id="@+id/digit_pad_five_btn"
            android:layout_width="@dimen/digit_pad_width"
            android:layout_height="@dimen/digit_pad_width"/>
        <Button
            android:text="@string/digit_pad_six"
            android:layout_margin="@dimen/digit_pad_margin"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:id="@+id/digit_pad_six_btn"
            android:layout_width="@dimen/digit_pad_width"
            android:layout_height="@dimen/digit_pad_width"/>
        <Button
            android:text="@string/digit_pad_minus"
            android:layout_margin="@dimen/digit_pad_margin"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:id="@+id/digit_pad_minus_btn"
            android:layout_width="@dimen/digit_pad_width"
            android:layout_height="@dimen/digit_pad_width"/>
        <Button
            android:text="@string/digit_pad_seven"
            android:layout_margin="@dimen/digit_pad_margin"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:id="@+id/digit_pad_seven_btn"
            android:layout_width="@dimen/digit_pad_width"
            android:layout_height="@dimen/digit_pad_width"/>
        <Button
            android:text="@string/digit_pad_eight"
            android:layout_margin="@dimen/digit_pad_margin"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:id="@+id/digit_pad_eight_btn"
            android:layout_width="@dimen/digit_pad_width"
            android:layout_height="@dimen/digit_pad_width"/>
        <Button
            android:text="@string/digit_pad_nine"
            android:layout_margin="@dimen/digit_pad_margin"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:id="@+id/digit_pad_nine_btn"
            android:layout_width="@dimen/digit_pad_width"
            android:layout_height="@dimen/digit_pad_width"/>
        <Button
            android:text="@string/digit_pad_multiply"
            android:layout_margin="@dimen/digit_pad_margin"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:id="@+id/digit_pad_multiply_btn"
            android:layout_width="@dimen/digit_pad_width"
            android:layout_height="@dimen/digit_pad_width"/>
        <Button
            android:text="@string/digit_pad_clear"
            android:layout_margin="@dimen/digit_pad_margin"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:id="@+id/digit_pad_clear_btn"
            android:layout_width="@dimen/digit_pad_width"
            android:layout_height="@dimen/digit_pad_width"/>
        <Button
            android:text="@string/digit_pad_zero"
            android:layout_margin="@dimen/digit_pad_margin"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:id="@+id/digit_pad_zero_btn"
            android:layout_width="@dimen/digit_pad_width"
            android:layout_height="@dimen/digit_pad_width"/>
        <Button
            android:text="@string/digit_pad_equal"
            android:layout_margin="@dimen/digit_pad_margin"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:id="@+id/digit_pad_equal_btn"
            android:layout_width="@dimen/digit_pad_width"
            android:layout_height="@dimen/digit_pad_width"/>
        <Button
            android:text="@string/digit_pad_divide"
            android:layout_margin="@dimen/digit_pad_margin"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:id="@+id/digit_pad_divide_btn"
            android:layout_width="@dimen/digit_pad_width"
            android:layout_height="@dimen/digit_pad_width"/>
    </GridLayout>-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_weight="1"
                android:layout_margin="@dimen/digit_pad_margin"
                android:text="@string/digit_pad_one"
                android:id="@+id/digit_pad_one_btn"
                android:layout_width="@dimen/digit_pad_width"
                android:layout_height="@dimen/digit_pad_height"/>
            <Button
                android:layout_margin="@dimen/digit_pad_margin"
                android:text="@string/digit_pad_two"
               android:layout_weight="1"
                android:id="@+id/digit_pad_two_btn"
                android:layout_width="@dimen/digit_pad_width"
                android:layout_height="@dimen/digit_pad_height"/>
            <Button
                android:layout_weight="1"
                android:text="@string/digit_pad_three"
                android:layout_margin="@dimen/digit_pad_margin"
                android:id="@+id/digit_pad_three_btn"
                android:layout_width="@dimen/digit_pad_width"
                android:layout_height="@dimen/digit_pad_height"/>
            <Button
                android:text="@string/digit_pad_plus"
                android:id="@+id/digit_pad_plus_btn"
                android:layout_width="@dimen/digit_pad_width"
                android:layout_height="@dimen/digit_pad_height"
                android:layout_weight="1"
                android:layout_margin="@dimen/digit_pad_margin" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:text="@string/digit_pad_four"
                android:layout_margin="@dimen/digit_pad_margin"
               android:layout_weight="1"
                android:id="@+id/digit_pad_four_btn"
                android:layout_width="@dimen/digit_pad_width"
                android:layout_height="@dimen/digit_pad_height"/>
            <Button
                android:text="@string/digit_pad_five"
                android:layout_margin="@dimen/digit_pad_margin"
               android:layout_weight="1"
                android:id="@+id/digit_pad_five_btn"
                android:layout_width="@dimen/digit_pad_width"
                android:layout_height="@dimen/digit_pad_height"/>
            <Button
                android:text="@string/digit_pad_six"
                android:layout_margin="@dimen/digit_pad_margin"
                android:layout_weight="1"
                android:id="@+id/digit_pad_six_btn"
                android:layout_width="@dimen/digit_pad_width"
                android:layout_height="@dimen/digit_pad_height"/>
            <Button
                android:text="@string/digit_pad_minus"
                android:layout_margin="@dimen/digit_pad_margin"
               android:layout_weight="1"
                android:id="@+id/digit_pad_minus_btn"
                android:layout_width="@dimen/digit_pad_width"
                android:layout_height="@dimen/digit_pad_height"/>

        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:text="@string/digit_pad_seven"
                android:layout_margin="@dimen/digit_pad_margin"
                android:layout_weight="1"
                android:id="@+id/digit_pad_seven_btn"
                android:layout_width="@dimen/digit_pad_width"
                android:layout_height="@dimen/digit_pad_height"/>
            <Button
                android:text="@string/digit_pad_eight"
                android:layout_margin="@dimen/digit_pad_margin"
               android:layout_weight="1"
                android:id="@+id/digit_pad_eight_btn"
                android:layout_width="@dimen/digit_pad_width"
                android:layout_height="@dimen/digit_pad_height"/>
            <Button
                android:text="@string/digit_pad_nine"
                android:layout_margin="@dimen/digit_pad_margin"
                android:layout_weight="1"
                android:id="@+id/digit_pad_nine_btn"
                android:layout_width="@dimen/digit_pad_width"
                android:layout_height="@dimen/digit_pad_height"/>
            <Button
                android:text="@string/digit_pad_multiply"
                android:layout_margin="@dimen/digit_pad_margin"
                android:layout_weight="1"
                android:id="@+id/digit_pad_multiply_btn"
                android:layout_width="@dimen/digit_pad_width"
                android:layout_height="@dimen/digit_pad_height"/>

        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/digit_pad_clear"
                android:layout_margin="@dimen/digit_pad_margin"
               android:layout_weight="1"
                android:id="@+id/digit_pad_clear_btn"
                android:layout_width="@dimen/digit_pad_width"
                android:layout_height="@dimen/digit_pad_height"/>
            <Button
                android:text="@string/digit_pad_zero"
                android:layout_margin="@dimen/digit_pad_margin"
                android:layout_weight="1"
                android:id="@+id/digit_pad_zero_btn"
                android:layout_width="@dimen/digit_pad_width"
                android:layout_height="@dimen/digit_pad_height"/>
            <Button
                android:text="@string/digit_pad_equal"
                android:layout_margin="@dimen/digit_pad_margin"
                android:layout_weight="1"
                android:id="@+id/digit_pad_equal_btn"
                android:layout_width="@dimen/digit_pad_width"
                android:layout_height="@dimen/digit_pad_height"/>
            <Button
                android:text="@string/digit_pad_divide"
                android:layout_margin="@dimen/digit_pad_margin"
                android:layout_weight="1"
                android:id="@+id/digit_pad_divide_btn"
                android:layout_width="@dimen/digit_pad_width"
                android:layout_height="@dimen/digit_pad_height"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:text="@string/digit_pad_advance"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:id="@+id/digit_pad_advance_btn"
        android:layout_height="match_parent"
        />
    <LinearLayout
        android:id="@+id/scientific_adv_container_lv"
        android:visibility="invisible"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/advance_pad_rem_btn"
            android:text="@string/advance_rem_btn"
            android:layout_margin="@dimen/advance_btn_margin"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/advance_pad_pow_btn"
            android:text="@string/advance_pow_btn"
            android:layout_margin="@dimen/advance_btn_margin"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/advance_pad_max_btn"
            android:text="@string/advance_max_btn"
            android:layout_margin="@dimen/advance_btn_margin"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/advance_pad_min_btn"
            android:text="@string/advance_min_btn"
            android:layout_margin="@dimen/advance_btn_margin"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>